--- a/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli_starter.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "1                          Frenzied Scimitar   1.56  "
       ]
      },
-     "execution_count": 130,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
        "0           576"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -203,7 +203,7 @@
        "0                     183         $3.05                  780      $2379.77"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +295,7 @@
        "Other/Non-Disclosed            0      0.00%"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -414,7 +414,7 @@
        "Other / Non-Disclosed               $167.94  "
       ]
      },
-     "execution_count": 138,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
        "40+                  7      1.22%"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "40+                                   $3.08  "
       ]
      },
-     "execution_count": 146,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,31 +789,109 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Run basic calculations to obtain the results in the table below\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the total purchase value column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Average Purchase Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SN</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Lisosia93</th>\n",
+       "      <td>5</td>\n",
+       "      <td>$3.79</td>\n",
+       "      <td>$18.96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Idastidru52</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.86</td>\n",
+       "      <td>$15.45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chamjask73</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>$13.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iral74</th>\n",
+       "      <td>4</td>\n",
+       "      <td>$3.40</td>\n",
+       "      <td>$13.62</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Iskadarya95</th>\n",
+       "      <td>3</td>\n",
+       "      <td>$4.37</td>\n",
+       "      <td>$13.10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Purchase Count Average Purchase Price Total Purchase Value\n",
+       "SN                                                                     \n",
+       "Lisosia93                 5                  $3.79               $18.96\n",
+       "Idastidru52               4                  $3.86               $15.45\n",
+       "Chamjask73                3                  $4.61               $13.83\n",
+       "Iral74                    4                  $3.40               $13.62\n",
+       "Iskadarya95               3                  $4.37               $13.10"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_spenders = heroes_df.groupby([\"SN\"])\n",
+    "purchase_count = top_spenders[\"Item ID\"].count()\n",
+    "revenue = top_spenders[\"Price\"].sum()\n",
+    "avg_purchase_price = revenue / purchase_count\n",
+    "\n",
+    "#top_spenders= top_spenders.set_index('Gender')\n",
+    "top_spenders = pd.DataFrame({\"Purchase Count\": purchase_count,\n",
+    "                            \"Average Purchase Price\": avg_purchase_price,\n",
+    "                             \"Total Purchase Value\": revenue})\n",
+    "top_spenders = top_spenders.sort_values(\"Total Purchase Value\", ascending=False) \n",
+    "top_spenders[\"Average Purchase Price\"] = top_spenders[\"Average Purchase Price\"].map(\"${:.2f}\".format)\n",
+    "top_spenders[\"Total Purchase Value\"] = top_spenders[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
+    "\n",
+    "top_spenders.head()\n",
+    "               "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -823,54 +901,205 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Retrieve the Item ID, Item Name, and Item Price columns\n",
-    "\n",
-    "\n",
-    "* Group by Item ID and Item Name. Perform calculations to obtain purchase count, item price, and total purchase value\n",
-    "\n",
-    "\n",
-    "* Create a summary data frame to hold the results\n",
-    "\n",
-    "\n",
-    "* Sort the purchase count column in descending order\n",
-    "\n",
-    "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
-    "\n",
-    "\n",
-    "* Display a preview of the summary data frame\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>82</th>\n",
+       "      <th>Nirvana</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.90</td>\n",
+       "      <td>$44.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>$41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.88</td>\n",
+       "      <td>$39.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>103</th>\n",
+       "      <th>Singed Scalpel</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.35</td>\n",
+       "      <td>$34.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59</th>\n",
+       "      <th>Lightning, Etcher of the King</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>$33.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>$31.77</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>78</th>\n",
+       "      <th>Glimmer, Ender of the Moon</th>\n",
+       "      <td>7</td>\n",
+       "      <td>$4.40</td>\n",
+       "      <td>$30.80</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72</th>\n",
+       "      <th>Winter's Bite</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$3.77</td>\n",
+       "      <td>$30.16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60</th>\n",
+       "      <th>Wolf</th>\n",
+       "      <td>8</td>\n",
+       "      <td>$3.54</td>\n",
+       "      <td>$28.32</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>179</th>\n",
+       "      <th>Wolf, Promise of the Moonwalker</th>\n",
+       "      <td>6</td>\n",
+       "      <td>$4.48</td>\n",
+       "      <td>$26.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <th>Azurewrath</th>\n",
+       "      <td>6</td>\n",
+       "      <td>$4.40</td>\n",
+       "      <td>$26.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "82      Nirvana                                                    9   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "92      Final Critic                                               8   \n",
+       "103     Singed Scalpel                                             8   \n",
+       "59      Lightning, Etcher of the King                              8   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
+       "78      Glimmer, Ender of the Moon                                 7   \n",
+       "72      Winter's Bite                                              8   \n",
+       "60      Wolf                                                       8   \n",
+       "179     Wolf, Promise of the Moonwalker                            6   \n",
+       "160     Azurewrath                                                 6   \n",
+       "\n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "82      Nirvana                                           $4.90   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "92      Final Critic                                      $4.88   \n",
+       "103     Singed Scalpel                                    $4.35   \n",
+       "59      Lightning, Etcher of the King                     $4.23   \n",
+       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "78      Glimmer, Ender of the Moon                        $4.40   \n",
+       "72      Winter's Bite                                     $3.77   \n",
+       "60      Wolf                                              $3.54   \n",
+       "179     Wolf, Promise of the Moonwalker                   $4.48   \n",
+       "160     Azurewrath                                        $4.40   \n",
+       "\n",
+       "                                                     Total Purchase Value  \n",
+       "Item ID Item Name                                                          \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm               $50.76  \n",
+       "82      Nirvana                                                    $44.10  \n",
+       "145     Fiery Glass Crusader                                       $41.22  \n",
+       "92      Final Critic                                               $39.04  \n",
+       "103     Singed Scalpel                                             $34.80  \n",
+       "59      Lightning, Etcher of the King                              $33.84  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  $31.77  \n",
+       "78      Glimmer, Ender of the Moon                                 $30.80  \n",
+       "72      Winter's Bite                                              $30.16  \n",
+       "60      Wolf                                                       $28.32  \n",
+       "179     Wolf, Promise of the Moonwalker                            $26.88  \n",
+       "160     Azurewrath                                                 $26.40  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "## Most Profitable Items"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "* Sort the above table by total purchase value in descending order\n",
+    "most_popular_items = heroes_df[[\"Item ID\", \"Item Name\", \"Price\"]]\n",
+    "most_popular_items = most_popular_items.groupby(['Item ID','Item Name'])\n",
+    "purchase_count = most_popular_items[\"Item ID\"].count()\n",
+    "item_price = most_popular_items[\"Price\"].mean()\n",
+    "total_purchase_value = purchase_count * item_price\n",
+    "\n",
+    "most_popular_items = pd.DataFrame({\"Purchase Count\": purchase_count,\n",
+    "                                  \"Item Price\": item_price,\n",
+    "                                  \"Total Purchase Value\": total_purchase_value})\n",
+    "\n",
+    "most_popular_items = most_popular_items.sort_values(\"Total Purchase Value\", ascending=False) \n",
+    "\n",
+    "most_popular_items[\"Item Price\"] = most_popular_items[\"Item Price\"].map(\"${:.2f}\".format)\n",
+    "most_popular_items[\"Total Purchase Value\"] = most_popular_items[\"Total Purchase Value\"].map(\"${:.2f}\".format)\n",
     "\n",
     "\n",
-    "* Optional: give the displayed data cleaner formatting\n",
+    "#most_popular_items= most_popular_items.set_index('Item ID')\n",
     "\n",
-    "\n",
-    "* Display a preview of the data frame\n",
-    "\n"
+    "most_popular_items.head(12)"
    ]
   },
   {
